Corrected combo-box on mobile

--- a/KoteiKatoM.css
+++ b/KoteiKatoM.css
@@ -48,7 +48,7 @@ position: absolute; /* Takes it out of the flow */
   margin-top: 110px;        /* Adds space from the top of the browser */
   margin-left: 30px;
   margin-bottom: 20px;     /* Adds space before your dropdown grid starts */
-  font-size: 3rem;       /* Makes it nice and large */
+  font-size: 3.5rem;       /* Makes it nice and large */
   color:  #BA55D3;             /* Use your preferred color */
   width: 100%;             /* Ensures it spans the full width to center correctly */
   z-index:10;
@@ -105,14 +105,14 @@ touch-action: none;
 }
 
 #control-panel{
-  margin-left: -27px;
+  margin-left: 120px;
   display: flex;
   flex-direction: row;
   justify-content: center; /* Centers horizontally */
   align-items: flex-start; /* Keeps them at the top */
-  gap: 56px;               /* Space between the two grids */
+  gap: 90px;               /* Space between the two grids */
   padding-bottom: 22%;       /* Margin from the very top of the page */
-  width: 100%;
+  width: 75%;
 }
 
 /* Styling to make them look like a D-pad */
@@ -213,7 +213,7 @@ label {
 
 #combo_box {
     display: inline-block;
-    padding: 1px;
+    padding: 3px;
     padding-bottom:5px;
 
 }
